# OTLP

./: .gitignore  .markdownlint.json  2025_ALIGNMENT_ANALYSIS.md  2025_EXECUTION_SUMMARY.md  2025_PROJECT_ALIGNMENT_AND_ROADMAP.md  AUTOMATION_GUIDE.md  COMPLETE_DOCUMENTATION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  DOCUMENT_INDEX.md  FINAL_SUMMARY.md  LICENSE  NOTICE  OTLP_2025_ACADEMIC_COLLABORATION_FRAMEWORK.md  OTLP_2025_ACADEMIC_COMMUNITY_GUIDELINES.md  OTLP_2025_ADVANCED_FORMAL_PROOFS.md  OTLP_2025_AUTOMATION_TOOLCHAIN.md  OTLP_2025_COMPREHENSIVE_INDEX.md  OTLP_2025_COMPREHENSIVE_PROJECT_SUMMARY.md  OTLP_2025_COMPREHENSIVE_RECONSTRUCTION_PLAN.md  OTLP_2025_COMPREHENSIVE_SUMMARY.md  OTLP_2025_CONTINUOUS_IMPROVEMENT_PLAN.md  OTLP_2025_DEPLOYMENT_OPERATIONS_GUIDE.md  OTLP_2025_EXECUTION_SUMMARY.md  OTLP_2025_FINAL_DELIVERY_COMPLETE.md  OTLP_2025_FINAL_PROJECT_DELIVERY.md  OTLP_2025_FINAL_PROJECT_SUMMARY.md  OTLP_2025_FINAL_TRANSFORMATION_SUMMARY.md  OTLP_2025_INDUSTRY_CASE_STUDIES.md  OTLP_2025_INTERNATIONAL_ALIGNMENT_STRUCTURE.md  OTLP_2025_KNOWLEDGE_FRAMEWORK.md  OTLP_2025_KNOWLEDGE_FRAMEWORK_REDESIGN.md  OTLP_2025_PROJECT_METADATA.md  OTLP_2025_PROJECT_STATUS_UPDATE.md  OTLP_2025_PROJECT_STRUCTURE_OPTIMIZATION.md  OTLP_2025_PROJECT_SUMMARY.md  OTLP_2025_QUALITY_VALIDATION_SYSTEM.md  OTLP_2025_STANDARDS_COMPLIANCE_FRAMEWORK.md  OTLP_2025_TRAINING_MATERIALS.md  (+178 more)
.github/: pull_request_template.md
.progress/: OTLP项目全面批判性分析报告_v1.0.md  current_status.json  归档策略_v1.0.md  待处理文件清单.csv  文档格式规范标准_v1.0.md  最终重构方案_v4.0.md  核心文档保留清单.md  目录合并日志.txt
00_Project_Governance/: COMPREHENSIVE_PROJECT_SUMMARY.md  FINAL_PROJECT_DELIVERY.md  PROJECT_RESTRUCTURE_SUMMARY.md  PROJECT_TRANSFORMATION_SUMMARY.md
00_Project_Metadata/: INTERNATIONAL_ALIGNMENT.md  (+1 more)
doc/technologies/tracezip/: Cargo.toml
doc/technologies/tracezip/src/: lib.rs  main.rs
docs/: TOC.md  (+58 more)
examples/minimal-rust/: Cargo.toml  README.md
examples/minimal-rust/src/: main.rs
(+1956 files in other folders)
