[workspace]
members = [
    "examples/minimal-rust"
]
resolver = "3"

[workspace.package]
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
opentelemetry = { version = "0.29", features = ["trace"] }
opentelemetry-sdk = { package = "opentelemetry_sdk", version = "0.29", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.29", features = ["trace", "http-proto"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter", "registry"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing-opentelemetry = "0.30.0"
opentelemetry-proto = "=0.29.0"
prost = "0.13"
