[package]
name = "minimal-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["trace", "http-proto"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter", "registry"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-opentelemetry = { workspace = true }
prost = { workspace = true }


