[package]
name = "tracezip-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.21", features = ["trace", "http-proto"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tracing-opentelemetry = "0.21"
flate2 = "1.0"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
